[package]
name = "twilight-modbot"
version = "0.1.0"
authors = ["Zeyla Hellyer <zeyla@hellyer.dev>", "Cassandra McCarthy <cassie@7596ff.com>"]
edition = "2018"
license = "ISC"

[dependencies]
chrono = "0.4"
futures-util = { default-features = false, version = "0.3" }
tokio = { default-features = false, features = ["macros", "rt"], version = "1" }
tracing-subscriber = { version = "0.2" }
twilight-gateway = { default-features = false, features = ["rustls"], version = "0.7" }
twilight-http = { default-features = false, features = ["rustls"], version = "0.7.1" }
twilight-model = { default-features = false, version = "0.7" }
